add more country names to the valid list, countries we already have in the md files

--- a/config.yaml
+++ b/config.yaml
@@ -9,5 +9,18 @@ countries:
   - Australia
   - Bulgaria
   - Canada
+  - Estonia
+  - Germany
+  - Hungary
+  - India
+  - Israel
+  - Italy
+  - Japan
+  - Korea
+  - Kurdistan
+  - Singapore
+  - Sri Lanka
+  - Sweden
   - UK
+  - USA
 
