--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Generate HTML Pages
       run: |
-        pip install -r requirements.txt
+        pip install -r requirements.txt -c constraints.txt
         python generate.py
 
     - name: Upload artifact
