once a day rerun the build to create the new cache and update the data

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
   workflow_dispatch:
   workflow_call:
+  schedule:
+    - cron: '1 1 * * *'
 
 env:
     MY_GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
