--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,10 @@ jobs:
       run: |
         pip install -r requirements.txt -c constraints.txt
 
+    - name: Run code tests
+      run: |
+        pytest -svv test_generate.py
+
     - name: Collect data and generate HTML Pages
       run: |
         python generate.py
