--- a/data/organisations/jce.yaml
+++ b/data/organisations/jce.yaml
@@ -1,12 +1,7 @@
 
 name: Azrieli college of engineering - JCE
 type: university
-url: https://jce.ac.il/
+url: https://jce.ac.il
 city: Jerusalem
 country: Israel
-
-
-
-
-~
 
