--- a/data/organisations/jce.yaml
+++ b/data/organisations/jce.yaml
@@ -1,5 +1,5 @@
 
-name: Azrieli college of engineering - JCE
+name: Azrieli College Of Engineering - JCE
 type: university
 url: https://jce.ac.il
 city: Jerusalem
